book: re-render with the `+` work-around
In https://github.com/git/git-scm.com/pull/1879 it was reported that at
least the English and Korean version of chapter 10 section 5 displayed a
regression where the explanation of the refspec format was formatted
incorrectly.

Turns out that this is a regression in AsciiDoctor v2.0.19. We just
adjusted the `update-book2.rb` script to work around this issue, and now
it is time to commit the result of re-running that script for all
variants of the ProGit book.

This commit is best viewed with `--word-diff`.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/external/book/content/book/az/v2/GitHub-Bir-Layihənin-Saxlanılması.html
+++ b/external/book/content/book/az/v2/GitHub-Bir-Layihənin-Saxlanılması.html
@@ -26,7 +26,7 @@ url: "/book/az/v2/GitHub-Bir-Layihənin-Saxlanılması.html"
 <h3 id="_yeni_bir_depo_yaratmaq">Yeni bir Depo Yaratmaq</h3>
 <div class="paragraph">
 <p>Layihə kodumuzu bölüşmək üçün yeni bir depo yaradaq.
-Vasitə panelinin sağ tərəfindəki  “New repository” düyməsinə və ya <a href="{{< relurl "book/az/v2/ch00/_new_repo_dropdown" >}}">“Yeni Depo” açılışı</a>-da göründüyü kimi istifadəçi adınızın yanındakı yuxarı alətlər panelindəki <code>+</code> düyməsindən basaraq başlaya bilərsiniz.</p>
+Vasitə panelinin sağ tərəfindəki  “New repository” düyməsinə və ya <a href="{{< relurl "book/az/v2/ch00/_new_repo_dropdown" >}}">“Yeni Depo” açılışı</a>-da göründüyü kimi istifadəçi adınızın yanındakı yuxarı alətlər panelindəki <code>{plus}</code> düyməsindən basaraq başlaya bilərsiniz.</p>
 </div>
 <div class="imageblock">
 <div class="content">
