--- a/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Refspec.html
+++ b/external/book/content/book/az/v2/Git’in-Daxili-İşləri-Refspec.html
@@ -39,8 +39,8 @@ Tutaq ki, son cüt bölmələri ilə birlikdə izlədiniz və kiçik bir yerli G
 </div>
 </div>
 <div class="paragraph">
-<p>Refspecin formatı, əvvəlcə istəyə bağlı bir <code>+</code> ardından  <code>&lt;src&gt;:&lt;dst&gt;</code>, burada  <code>&lt;src&gt;</code> remote tərəfdəki referanslar üçün nümunədir və <code>&lt;dst&gt;</code> olduğu yerdir və bu referanslar yerli olaraq izləniləcəkdir.
-<code>+</code> Git-ə sürətli irəliləməsə də referansı yeniləməsini söyləyir.</p>
+<p>Refspecin formatı, əvvəlcə istəyə bağlı bir <code>{plus}</code> ardından  <code>&lt;src&gt;:&lt;dst&gt;</code>, burada  <code>&lt;src&gt;</code> remote tərəfdəki referanslar üçün nümunədir və <code>&lt;dst&gt;</code> olduğu yerdir və bu referanslar yerli olaraq izləniləcəkdir.
+<code>{plus}</code> Git-ə sürətli irəliləməsə də referansı yeniləməsini söyləyir.</p>
 </div>
 <div class="paragraph">
 <p>Avtomatik olaraq bir  <code>git remote add origin</code> əmri ilə yazılan varsayılan vəziyyətdə, Git serverdəki <code>refs/heads/</code> altındakı bütün referansları götürür və yerli olaraq  <code>refs/remotes/origin/</code> yazır.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>Bu vəziyyətdə, sürətli master istinad kimi göstərilmədiyi üçün <code>master</code> branch pull etməsi rədd edildi.
-Refspecin qarşısındakı <code>+</code> işarəsini göstərərək bunu ləğv edə bilərsiniz.</p>
+Refspecin qarşısındakı <code>{plus}</code> işarəsini göstərərək bunu ləğv edə bilərsiniz.</p>
 </div>
 <div class="paragraph">
 <p>Konfiqurasiya faylınızda əldə etmək üçün birdən çox refspecs də göstərə bilərsiniz.
