--- a/external/book/content/book/bg/v2/Git-на-ниско-ниво-Refspec-спецификации.html
+++ b/external/book/content/book/bg/v2/Git-на-ниско-ниво-Refspec-спецификации.html
@@ -39,8 +39,8 @@ url: "/book/bg/v2/Git-на-ниско-ниво-Refspec-спецификации.
 </div>
 </div>
 <div class="paragraph">
-<p>Форматът е символът <code>` (който е опция), последван от `&lt;src&gt;:&lt;dst&gt;`, където `&lt;src&gt;` е израз за референциите от отдалечената страна на връзката и `&lt;dst&gt;` указва къде тези референции ще се проследяват локално.
-Символът `</code> казва на Git да обновява референцията дори, когато тя не е fast-forward.</p>
+<p>Форматът е символът <code>+</code> (който е опция), последван от <code>&lt;src&gt;:&lt;dst&gt;</code>, където <code>&lt;src&gt;</code> е израз за референциите от отдалечената страна на връзката и <code>&lt;dst&gt;</code> указва къде тези референции ще се проследяват локално.
+Символът <code>+</code> казва на Git да обновява референцията дори, когато тя не е fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>В случаите по подразбиране, това се записва автоматично от командата <code>git remote add origin</code>, Git издърпва всички референции от <code>refs/heads/</code> на сървъра и ги записва в <code>refs/remotes/origin/</code> локално.
