--- a/external/book/content/book/cs/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/cs/v2/Git-Internals-The-Refspec.html
@@ -38,8 +38,8 @@ title: Git - The Refspec
 </div>
 </div>
 <div class="paragraph">
-<p>Refspec má následující formát: fakultativní znak <code>+</code>, za nímž následuje <code>&lt;src&gt;:&lt;dst&gt;</code>, kde <code>&lt;src&gt;</code> je vzor pro referenci na straně vzdáleného serveru a <code>&lt;dst&gt;</code> je lokální umístění, kam mají být tyto reference zapsány.
-The <code>+</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
+<p>Refspec má následující formát: fakultativní znak <code>{plus}</code>, za nímž následuje <code>&lt;src&gt;:&lt;dst&gt;</code>, kde <code>&lt;src&gt;</code> je vzor pro referenci na straně vzdáleného serveru a <code>&lt;dst&gt;</code> je lokální umístění, kam mají být tyto reference zapsány.
+The <code>{plus}</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>Ve výchozím případě, který se automaticky zapisuje příkazem <code>git remote add</code>, Git vyzvedne všechny reference z adresáře <code>refs/heads/</code> na serveru a zapíše je do lokálního adresáře <code>refs/remotes/origin/</code>.
@@ -88,7 +88,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>In this case, the <code>master</code> branch pull was rejected because it wasn’t a fast-forward reference.
-Odmítnutí serveru můžete potlačit zadáním znaku <code>+</code> před vzorec refspec.</p>
+Odmítnutí serveru můžete potlačit zadáním znaku <code>{plus}</code> před vzorec refspec.</p>
 </div>
 <div class="paragraph">
 <p>V konfiguračním souboru můžete také použít více vzorců refspec pro vyzvedávání dat.
