--- a/external/book/content/book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec.html
+++ b/external/book/content/book/de/v2/Git-Interna-Die-Referenzspezifikation-engl-Refspec.html
@@ -38,8 +38,8 @@ Angenommen, du hast die letzten Abschnitte mitverfolgt und ein kleines lokales G
 </div>
 </div>
 <div class="paragraph">
-<p>Das Format der Refspec ist zunächst ein optionales <code>`, gefolgt von `&lt;src&gt;:&lt;dst&gt;`, wobei `&lt;src&gt;` das Muster für Referenzen auf der Remote-Seite ist. `&lt;dst&gt;` gibt an wo diese Referenzen lokal nachverfolgt werden.
-Das `</code> weist Git an, die Referenz zu aktualisieren, auch wenn es sich nicht um einen fast-forward handelt.</p>
+<p>Das Format der Refspec ist zunächst ein optionales <code>+</code>, gefolgt von <code>&lt;src&gt;:&lt;dst&gt;</code>, wobei <code>&lt;src&gt;</code> das Muster für Referenzen auf der Remote-Seite ist. <code>&lt;dst&gt;</code> gibt an wo diese Referenzen lokal nachverfolgt werden.
+Das <code>+</code> weist Git an, die Referenz zu aktualisieren, auch wenn es sich nicht um einen fast-forward handelt.</p>
 </div>
 <div class="paragraph">
 <p>In der Standardeinstellung, die automatisch von einem Befehl <code>git remote add origin</code> geschrieben wird, ruft Git alle Referenzen unter <code>refs/heads/</code> auf dem Server ab und schreibt sie lokal in <code>refs/remotes/origin/</code>.
