--- a/external/book/content/book/es/v2/GitHub-Mantenimiento-de-un-proyecto.html
+++ b/external/book/content/book/es/v2/GitHub-Mantenimiento-de-un-proyecto.html
@@ -27,7 +27,7 @@ puedes crear, administrar y mantener tu propio proyecto.</p>
 <div class="paragraph">
 <p>Vamos a crear un nuevo repositorio para compartir nuestro código en él.
 Comienza pulsando el botón “New repository” en el lado derecho de tu
-página principal, o bien desde el botón <code>+</code> en la barra de botones cercano
+página principal, o bien desde el botón <code>{plus}</code> en la barra de botones cercano
 a tu nombre de usuario, tal como se ve en <a href="{{< relurl "book/es/v2/ch00/r_new_repo_dropdown" >}}">Desplegable “New repository”.</a>.</p>
 </div>
 <div class="imageblock">
