--- a/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec.html
+++ b/external/book/content/book/es/v2/Los-entresijos-internos-de-Git-Las-especificaciones-para-hacer-referencia-a…​-refspec.html
@@ -39,8 +39,8 @@ Supón que añades un remoto tal que:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>El formato para esta referencia es un signo <code>+</code> opcional, seguido de una sentencia <code>&lt;orig&gt;:&lt;dest&gt;</code>; donde  <code>&lt;orig&gt;</code> es la plantilla para referencias en el lado remoto y <code>&lt;dest&gt;</code> el lugar donde esas referencias se escribirán en el lado local.
-El  <code>+</code>, si está presente, indica a Git que debe actualizar la referencia incluso en los casos en que no se dé un avance rápido (fast-forward).</p>
+<p>El formato para esta referencia es un signo <code>{plus}</code> opcional, seguido de una sentencia <code>&lt;orig&gt;:&lt;dest&gt;</code>; donde  <code>&lt;orig&gt;</code> es la plantilla para referencias en el lado remoto y <code>&lt;dest&gt;</code> el lugar donde esas referencias se escribirán en el lado local.
+El  <code>{plus}</code>, si está presente, indica a Git que debe actualizar la referencia incluso en los casos en que no se dé un avance rápido (fast-forward).</p>
 </div>
 <div class="paragraph">
 <p>En el caso por defecto en que es escrito por un comando <code>git remote add</code>, Git recupera del servidor todas las referencias bajo <code>refs/heads/</code>, y las escribe localmente en <code>refs/remotes/origin/</code>.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>En este ejemplo, se ha rechazado la recuperación de la rama master porque no era una referencia de avance rápido (fast-forward).
-Puedes forzarlo indicando el signo <code>+</code> delante de la referencia.</p>
+Puedes forzarlo indicando el signo <code>{plus}</code> delante de la referencia.</p>
 </div>
 <div class="paragraph">
 <p>Es posible asimismo indicar referencias múltiples en el archivo de configuración.
