--- a/external/book/content/book/fa/v2/GitHub-Maintaining-a-Project.html
+++ b/external/book/content/book/fa/v2/GitHub-Maintaining-a-Project.html
@@ -25,7 +25,7 @@ title: Git - Maintaining a Project
 <h3 id="_creating_a_new_repository">Creating a New Repository</h3>
 <div class="paragraph">
 <p>Let’s create a new repository to share our project code with.
-Start by clicking the “New repository” button on the right-hand side of the dashboard, or from the <code>+</code> button in the top toolbar next to your username as seen in <a href="{{< relurl "book/fa/v2/ch00/_new_repo_dropdown" >}}">The “New repository” dropdown.</a>.</p>
+Start by clicking the “New repository” button on the right-hand side of the dashboard, or from the <code>{plus}</code> button in the top toolbar next to your username as seen in <a href="{{< relurl "book/fa/v2/ch00/_new_repo_dropdown" >}}">The “New repository” dropdown.</a>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
