--- a/external/book/content/book/fr/v2/Les-tripes-de-Git-La-refspec.html
+++ b/external/book/content/book/fr/v2/Les-tripes-de-Git-La-refspec.html
@@ -40,8 +40,8 @@ Supposons que vous ajoutiez un dépôt distant comme ceci :</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Le format de la <em>refspec</em> est un <code>` facultatif, suivi de `&lt;src&gt;:&lt;dst&gt;`, où `&lt;src&gt;` est le motif des références du côté distant et `&lt;dst&gt;` est l'emplacement local où les références seront enregistrées.
-Le `</code> précise à Git de mettre à jour la référence même si ce n’est pas une avance rapide.</p>
+<p>Le format de la <em>refspec</em> est un <code>+</code> facultatif, suivi de <code>&lt;src&gt;:&lt;dst&gt;</code>, où <code>&lt;src&gt;</code> est le motif des références du côté distant et <code>&lt;dst&gt;</code> est l’emplacement local où les références seront enregistrées.
+Le <code>+</code> précise à Git de mettre à jour la référence même si ce n’est pas une avance rapide.</p>
 </div>
 <div class="paragraph">
 <p>Dans le cas par défaut, qui est celui d’un enregistrement automatique par la commande <code>git remote add origin</code>, Git récupère toutes les références de <code>refs/heads/</code> sur le serveur et les enregistre localement dans <code>refs/remotes/origin/</code>.
