--- a/external/book/content/book/id/v2/Git-Internals-The-Refspec.html
+++ b/external/book/content/book/id/v2/Git-Internals-The-Refspec.html
@@ -38,8 +38,8 @@ Suppose you add a remote like this:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>The format of the refspec is an optional <code>+</code>, followed by <code>&lt;src&gt;:&lt;dst&gt;</code>, where <code>&lt;src&gt;</code> is the pattern for references on the remote side and <code>&lt;dst&gt;</code> is where those references will be written locally.
-The <code>+</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
+<p>The format of the refspec is an optional <code>{plus}</code>, followed by <code>&lt;src&gt;:&lt;dst&gt;</code>, where <code>&lt;src&gt;</code> is the pattern for references on the remote side and <code>&lt;dst&gt;</code> is where those references will be written locally.
+The <code>{plus}</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>In the default case that is automatically written by a <code>git remote add</code> command, Git fetches all the references under <code>refs/heads/</code> on the server and writes them to <code>refs/remotes/origin/</code> locally.
@@ -88,7 +88,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>In this case, the  master branch pull was rejected because it wasn’t a fast-forward reference.
-You can override that by specifying the <code>+</code> in front of the refspec.</p>
+You can override that by specifying the <code>{plus}</code> in front of the refspec.</p>
 </div>
 <div class="paragraph">
 <p>You can also specify multiple refspecs for fetching in your configuration file.
