--- a/external/book/content/book/ja/v2/GitHub-プロジェクトのメンテナンス.html
+++ b/external/book/content/book/ja/v2/GitHub-プロジェクトのメンテナンス.html
@@ -27,7 +27,7 @@ url: "/book/ja/v2/GitHub-プロジェクトのメンテナンス.html"
 <div class="paragraph">
 <p>新しいプロジェクトを作って、自分たちのプロジェクトのコードを共有しましょう。
 まずはダッシュボードの右側にある “New repository” ボタンをクリックするか、
-上のツールバーでユーザー名の隣にある <code>+</code> ボタン (<a href="{{< relurl "book/ja/v2/ch00/r_new_repo_dropdown" >}}">“New repository” ドロップダウン</a> を参照) をクリックしましょう。</p>
+上のツールバーでユーザー名の隣にある <code>{plus}</code> ボタン (<a href="{{< relurl "book/ja/v2/ch00/r_new_repo_dropdown" >}}">“New repository” ドロップダウン</a> を参照) をクリックしましょう。</p>
 </div>
 <div class="imageblock">
 <div class="content">
