--- a/external/book/content/book/ja/v2/Gitの内側-Refspec.html
+++ b/external/book/content/book/ja/v2/Gitの内側-Refspec.html
@@ -38,8 +38,8 @@ url: "/book/ja/v2/Gitの内側-Refspec.html"
 </div>
 </div>
 <div class="paragraph">
-<p>refspecの書式は <code>&lt;src&gt;:&lt;dst&gt;</code> で、その前にオプションとして <code>+</code> を指定できます。ここで <code>&lt;src&gt;</code> はリモート側の参照に対するパターンで、 <code>&lt;dst&gt;</code> はそれらの参照がローカルで書きこまれる場所を示します。
-<code>+</code> は、fast-forwardでない場合でも参照を更新するようGitに指示しています。</p>
+<p>refspecの書式は <code>&lt;src&gt;:&lt;dst&gt;</code> で、その前にオプションとして <code>{plus}</code> を指定できます。ここで <code>&lt;src&gt;</code> はリモート側の参照に対するパターンで、 <code>&lt;dst&gt;</code> はそれらの参照がローカルで書きこまれる場所を示します。
+<code>{plus}</code> は、fast-forwardでない場合でも参照を更新するようGitに指示しています。</p>
 </div>
 <div class="paragraph">
 <p>デフォルトでは、 <code>git remote add</code> コマンドを実行すると、自動的にこの設定が書き込まれ、Gitはサーバー上の <code>refs/heads/</code> 以下にあるすべての参照をフェッチして、ローカルの <code>refs/remotes/origin/</code> に書き込みます。
@@ -88,7 +88,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>このケースでは、 <code>master</code> ブランチのプルはfast-forwardの参照ではなかったため拒否されました。
-refspecの先頭に <code>+</code> を指定すると、この動作を上書きできます。</p>
+refspecの先頭に <code>{plus}</code> を指定すると、この動作を上書きできます。</p>
 </div>
 <div class="paragraph">
 <p>さらに、設定ファイルに、フェッチ用のrefspecを複数指定することもできます。
