--- a/external/book/content/book/ko/v2/Git의-내부-Refspec.html
+++ b/external/book/content/book/ko/v2/Git의-내부-Refspec.html
@@ -39,7 +39,7 @@ url: "/book/ko/v2/Git의-내부-Refspec.html"
 </div>
 </div>
 <div class="paragraph">
-<p>Refspec 형식은 <code>` 와 `&lt;src&gt;:&lt;dest&gt;` 로 돼 있다. `</code> 는 생략 가능하고, <code>&lt;src&gt;</code> 는 리모트 저장소의 Refs 패턴이고 <code>&lt;dst&gt;</code> 는 매핑되는 로컬 저장소의 Refs 패턴이다.
+<p>Refspec 형식은 <code>+</code> 와 <code>&lt;src&gt;:&lt;dest&gt;</code> 로 돼 있다. <code>+</code> 는 생략 가능하고, <code>&lt;src&gt;</code> 는 리모트 저장소의 Refs 패턴이고 <code>&lt;dst&gt;</code> 는 매핑되는 로컬 저장소의 Refs 패턴이다.
 <code>+</code> 는 Fast-forward가 아닌 업데이트를 허용하는 것이다.</p>
 </div>
 <div class="paragraph">
