--- a/external/book/content/book/mk/v2/GitHub-Одржување-на-проект.html
+++ b/external/book/content/book/mk/v2/GitHub-Одржување-на-проект.html
@@ -26,7 +26,7 @@ url: "/book/mk/v2/GitHub-Одржување-на-проект.html"
 <h3 id="_креирање_на_нов_складиште">Креирање на нов складиште</h3>
 <div class="paragraph">
 <p>Ајде да создадеме ново складиште со кое ќе го споделиме нашиот проект код.
-Започнете со кликнување на копчето ‘` Нов репозиторија '’ на десната страна на контролната табла или од копчето <code>+</code> во горната лента со алатки веднаш до вашето корисничко име како што се гледа во &lt;&lt; _ new_repo_dropdown &gt;&gt;.</p>
+Започнете со кликнување на копчето ‘` Нов репозиторија '’ на десната страна на контролната табла или од копчето <code>{plus}</code> во горната лента со алатки веднаш до вашето корисничко име како што се гледа во &lt;&lt; _ new_repo_dropdown &gt;&gt;.</p>
 </div>
 <div class="imageblock">
 <div class="content">
