--- a/external/book/content/book/mk/v2/Внатрешноста-на-Git-The-Refspec.html
+++ b/external/book/content/book/mk/v2/Внатрешноста-на-Git-The-Refspec.html
@@ -39,8 +39,8 @@ Suppose you were following along with the last couple sections and had created a
 </div>
 </div>
 <div class="paragraph">
-<p>The format of the refspec is, first, an optional <code>+</code>, followed by <code>&lt;src&gt;:&lt;dst&gt;</code>, where <code>&lt;src&gt;</code> is the pattern for references on the remote side and <code>&lt;dst&gt;</code> is where those references will be tracked locally.
-The <code>+</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
+<p>The format of the refspec is, first, an optional <code>{plus}</code>, followed by <code>&lt;src&gt;:&lt;dst&gt;</code>, where <code>&lt;src&gt;</code> is the pattern for references on the remote side and <code>&lt;dst&gt;</code> is where those references will be tracked locally.
+The <code>{plus}</code> tells Git to update the reference even if it isn’t a fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>In the default case that is automatically written by a <code>git remote add</code> command, Git fetches all the references under <code>refs/heads/</code> on the server and writes them to <code>refs/remotes/origin/</code> locally.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>In this case, the <code>master</code> branch pull was rejected because it wasn’t listed as a fast-forward reference.
-You can override that by specifying the <code>+</code> in front of the refspec.</p>
+You can override that by specifying the <code>{plus}</code> in front of the refspec.</p>
 </div>
 <div class="paragraph">
 <p>You can also specify multiple refspecs for fetching in your configuration file.
