--- a/external/book/content/book/nl/v2/Git-Binnenwerk-De-Refspec.html
+++ b/external/book/content/book/nl/v2/Git-Binnenwerk-De-Refspec.html
@@ -38,8 +38,8 @@ Stel even dat je met de paar laatste secties hebt meegedaan en een kleine lokale
 </div>
 </div>
 <div class="paragraph">
-<p>Het formaat van de refspec is, eerst, een optionele <code>+</code>, gevolgd door <code>&lt;src&gt;:&lt;dst&gt;, waar `&lt;src&gt;</code> het patroon is voor referenties aan de remote kant, en <code>&lt;dst&gt;</code> de plaats is waar deze referenties lokaal zullen worden getrackt.
-De <code>+</code> draagt Git op om de referenties bij te werken zelfs als het geen fast-forward is.</p>
+<p>Het formaat van de refspec is, eerst, een optionele <code>{plus}</code>, gevolgd door <code>&lt;src&gt;:&lt;dst&gt;, waar `&lt;src&gt;</code> het patroon is voor referenties aan de remote kant, en <code>&lt;dst&gt;</code> de plaats is waar deze referenties lokaal zullen worden getrackt.
+De <code>{plus}</code> draagt Git op om de referenties bij te werken zelfs als het geen fast-forward is.</p>
 </div>
 <div class="paragraph">
 <p>In het standaard geval dat automatisch wordt geschreven door een <code>git remote add origin</code> commando, zal Git alle referenties onder <code>refs/heads</code> op de server fetchen en ze lokaal naar <code>refs/remotes/origin</code> schrijven.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>In dit geval wordt de pull van de <code>master</code>-branch geweigerd omdat het niet als een fast-forward referentie was opgegeven.
-Je kunt dat overschrijven door een <code>+</code> voor de refspec op te geven.</p>
+Je kunt dat overschrijven door een <code>{plus}</code> voor de refspec op te geven.</p>
 </div>
 <div class="paragraph">
 <p>Je kunt ook meerdere respecs voor fetchen aangeven in je configuratie bestand.
