--- a/external/book/content/book/nl/v2/GitHub-Een-project-onderhouden.html
+++ b/external/book/content/book/nl/v2/GitHub-Een-project-onderhouden.html
@@ -25,7 +25,7 @@ title: Git - Een project onderhouden
 <h3 id="_een_nieuwe_repository_aanmaken">Een nieuwe repository aanmaken</h3>
 <div class="paragraph">
 <p>Laten we eens een nieuwe repository aanmaken waarmee we de code van ons project delen.
-Begin met het klikken op de “New repository” knop aan de rechterkant van het dashboard, of vanaf de <code>+</code> knop in de bovenste toolbar naast je gebruikersnaam zoals te zien is in <a href="{{< relurl "book/nl/v2/ch00/_new_repo_dropdown" >}}">De “New repository” dropdown.</a>.</p>
+Begin met het klikken op de “New repository” knop aan de rechterkant van het dashboard, of vanaf de <code>{plus}</code> knop in de bovenste toolbar naast je gebruikersnaam zoals te zien is in <a href="{{< relurl "book/nl/v2/ch00/_new_repo_dropdown" >}}">De “New repository” dropdown.</a>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
