--- a/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec.html
+++ b/external/book/content/book/pl/v2/Mechanizmy-wewnętrzne-w-Git-Refspec.html
@@ -39,8 +39,8 @@ Załóżmy, że dodajesz zdalne repozytorium w taki sposób:</p>
 </div>
 </div>
 <div class="paragraph">
-<p>Refspec składa się z opcjonalnego znaku <code>+</code>, oraz wskazania ścieżki źródłowej i docelowej <code>&lt;src&gt;:&lt;dst&gt;</code>, gdzie <code>&lt;src&gt;</code> wskazuje referencję na zewnętrznym serwerze, a <code>&lt;dst&gt;</code> jest miejscem, w którym te referencje będą zapisywane lokalnie.
-Znak <code>+</code> wskazuje Gitowi, aby wykonywał aktualizację nawet wtedy, gdy ta referencja nie jest zwykłym przesunięciem (ang. <em>fast-forward</em>).</p>
+<p>Refspec składa się z opcjonalnego znaku <code>{plus}</code>, oraz wskazania ścieżki źródłowej i docelowej <code>&lt;src&gt;:&lt;dst&gt;</code>, gdzie <code>&lt;src&gt;</code> wskazuje referencję na zewnętrznym serwerze, a <code>&lt;dst&gt;</code> jest miejscem, w którym te referencje będą zapisywane lokalnie.
+Znak <code>{plus}</code> wskazuje Gitowi, aby wykonywał aktualizację nawet wtedy, gdy ta referencja nie jest zwykłym przesunięciem (ang. <em>fast-forward</em>).</p>
 </div>
 <div class="paragraph">
 <p>W zwyczajnym przypadku, jest to zapisywane automatycznie przez komendę <code>git remote add</code>, Git pobiera wszystkie referencje z <code>refs/heads/</code> na serwerze i zapisuje je do <code>refs/remotes/origin/</code> lokalnie.
@@ -89,7 +89,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>W tym wypadku, pobieranie gałęzi <code>master</code> zostało odrzucone, ponieważ nie była to gałąź fast-forward (tzn. nie było możliwe wykonanie prostego przesunięcia w celu włączenia zmian).
-Możesz to zmienić, poprzez ustawienie znaku <code>+</code> na początku definicji refspec.</p>
+Możesz to zmienić, poprzez ustawienie znaku <code>{plus}</code> na początku definicji refspec.</p>
 </div>
 <div class="paragraph">
 <p>Możesz również ustawić wiele definicji refspec w pliku konfiguracyjnym.
