--- a/external/book/content/book/ru/v2/Git-изнутри-Спецификации-ссылок.html
+++ b/external/book/content/book/ru/v2/Git-изнутри-Спецификации-ссылок.html
@@ -39,8 +39,8 @@ url: "/book/ru/v2/Git-изнутри-Спецификации-ссылок.html"
 </div>
 </div>
 <div class="paragraph">
-<p>Формат спецификации следующий: опциональный <code>`, далее пара `&lt;src&gt;:&lt;dst&gt;`, где `&lt;src&gt;` -- шаблон ссылок в удалённом репозитории, а `&lt;dst&gt;` -- соответствующий шаблон локальных ссылок.
-Символ `</code> сообщает Git, что обновление необходимо выполнять даже в том случае, если оно не является простым смещением.</p>
+<p>Формат спецификации следующий: опциональный <code>+</code>, далее пара <code>&lt;src&gt;:&lt;dst&gt;</code>, где <code>&lt;src&gt;</code> — шаблон ссылок в удалённом репозитории, а <code>&lt;dst&gt;</code> — соответствующий шаблон локальных ссылок.
+Символ <code>+</code> сообщает Git, что обновление необходимо выполнять даже в том случае, если оно не является простым смещением.</p>
 </div>
 <div class="paragraph">
 <p>По умолчанию, после выполнения <code>git remote add origin</code>, Git забирает все ссылки из <code>refs/heads/</code> на сервере, и записывает их в <code>refs/remotes/origin/</code> локально.
