--- a/external/book/content/book/sl/v2/Notranjost-Gita-Refspec.html
+++ b/external/book/content/book/sl/v2/Notranjost-Gita-Refspec.html
@@ -38,8 +38,8 @@ Predpostavimo, da ste sledili zadnjim nekaj razdelkom in ustvarili majhen lokale
 </div>
 </div>
 <div class="paragraph">
-<p>Oblika refspec je najprej neobvezni <code>`, ki mu sledi `&lt;src&gt;:&lt;dst&gt;`, kjer je `&lt;src&gt;` vzorec za reference na oddaljeni strani in `&lt;dst&gt;` je lokacija, kjer bodo te reference sledene lokalno.
-`</code> pove Gitu, naj posodobi referenco, tudi če ni t. i. fast-forward.</p>
+<p>Oblika refspec je najprej neobvezni <code>+</code>, ki mu sledi <code>&lt;src&gt;:&lt;dst&gt;</code>, kjer je <code>&lt;src&gt;</code> vzorec za reference na oddaljeni strani in <code>&lt;dst&gt;</code> je lokacija, kjer bodo te reference sledene lokalno.
+<code>+</code> pove Gitu, naj posodobi referenco, tudi če ni t. i. fast-forward.</p>
 </div>
 <div class="paragraph">
 <p>V privzetem primeru, je to avtomatsko zapisano z ukazom <code>git remote add origin</code>, Git prenese vse reference pod <code>refs/heads/</code> na strežniku in jih zapiše v <code>refs/remotes/origin/</code> lokalno.
