--- a/external/book/content/book/sr/v2/Гит-изнутра-Рефспек.html
+++ b/external/book/content/book/sr/v2/Гит-изнутра-Рефспек.html
@@ -39,8 +39,8 @@ url: "/book/sr/v2/Гит-изнутра-Рефспек.html"
 </div>
 </div>
 <div class="paragraph">
-<p>Формат рефспека је прво необавезни <code>` за којим следи `&lt;изв&gt;:&lt;одр&gt;`, где је `&lt;изв&gt;` шаблон за референце на удаљеној страни, а `&lt;одр&gt;` је место на којем ће се те референце пратити локално.
-Знак `</code> говори програму Гит да ажурира референцу чак и ако није у питању премотавање унапред.</p>
+<p>Формат рефспека је прво необавезни <code>+</code> за којим следи <code>&lt;изв&gt;:&lt;одр&gt;</code>, где је <code>&lt;изв&gt;</code> шаблон за референце на удаљеној страни, а <code>&lt;одр&gt;</code> је место на којем ће се те референце пратити локално.
+Знак <code>+</code> говори програму Гит да ажурира референцу чак и ако није у питању премотавање унапред.</p>
 </div>
 <div class="paragraph">
 <p>У подразумеваном случају који аутоматски уписује команда <code>git remote add</code>, програм Гит преузима све референце под <code>refs/heads/</code> на серверу и пише их локално у <code>refs/remotes/origin/</code>.
