--- a/external/book/content/book/tl/v2/GitHub-Pagpapanatili-ng-isang-Proyekto.html
+++ b/external/book/content/book/tl/v2/GitHub-Pagpapanatili-ng-isang-Proyekto.html
@@ -25,7 +25,7 @@ title: Git - Pagpapanatili ng isang Proyekto
 <h3 id="_paglilikha_ng_isang_bagong_repositoryo">Paglilikha ng isang Bagong Repositoryo</h3>
 <div class="paragraph">
 <p>Lumikha ng isang bagong repositoryo upang maibahagi ang ating code ng proyekto.
-Simulan sa pamamagitan ng pag-click sa pindutan na “Bagong Repositoryo” sa kanang bahagi ng dashboard, o mula sa pindutan na <code>+</code> sa itaas na toolbar kasunod sa iyong usernmame gaya ng nakikita sa <a href="{{< relurl "book/tl/v2/ch00/_new_repo_dropdown" >}}">Ang dropdown na “Bagong repositoryo”.</a>.</p>
+Simulan sa pamamagitan ng pag-click sa pindutan na “Bagong Repositoryo” sa kanang bahagi ng dashboard, o mula sa pindutan na <code>{plus}</code> sa itaas na toolbar kasunod sa iyong usernmame gaya ng nakikita sa <a href="{{< relurl "book/tl/v2/ch00/_new_repo_dropdown" >}}">Ang dropdown na “Bagong repositoryo”.</a>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
