--- a/external/book/content/book/tl/v2/Mga-Panloob-ng-GIT-Ang-Refspec.html
+++ b/external/book/content/book/tl/v2/Mga-Panloob-ng-GIT-Ang-Refspec.html
@@ -38,8 +38,8 @@ Ipagpalagay na sumunod ka sa mga huling pares na mga seksyon at nakagawa ng isan
 </div>
 </div>
 <div class="paragraph">
-<p>Ang format ng refspec ay, una, ang opsyonal na <code>+</code>, sinusundan ng <code>&lt;src&gt;:&lt;dst&gt;</code>, kung saan ang <code>&lt;src&gt;</code> ay ang pattern para sa mga reperensiya sa remote na bahagi at <code>&lt;dst&gt;</code> ay kung saan ang mga reperensiya ay susubaybayan nang lokal.
-Ang <code>+</code> ay nagsasabi sa Git na i-update ang reperensiya kahit na ito ay hindi isang mabilis na pasulong.</p>
+<p>Ang format ng refspec ay, una, ang opsyonal na <code>{plus}</code>, sinusundan ng <code>&lt;src&gt;:&lt;dst&gt;</code>, kung saan ang <code>&lt;src&gt;</code> ay ang pattern para sa mga reperensiya sa remote na bahagi at <code>&lt;dst&gt;</code> ay kung saan ang mga reperensiya ay susubaybayan nang lokal.
+Ang <code>{plus}</code> ay nagsasabi sa Git na i-update ang reperensiya kahit na ito ay hindi isang mabilis na pasulong.</p>
 </div>
 <div class="paragraph">
 <p>Sa default na kaso na awtomatikong isinulat ng isang <code>git remote add</code> na utos, kinukuha ng Git ang lahat ng mga reperensiya sa ilalim ng mga <code>refs/heads/</code> sa server at sinusulat ito sa <code>refs/remotes/origin/</code> nang lokal.
@@ -90,7 +90,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>Sa kasong ito, ang <code>master</code> na branch na pull ay tinanggihan dahil hindi ito nakalista bilang mabilis na pasulong na reperensiya.
-Maari mo itong sapawan sa pamamagitan ng pagdagdag ng <code>+</code> sa unang bahagi ng refspec.</p>
+Maari mo itong sapawan sa pamamagitan ng pagdagdag ng <code>{plus}</code> sa unang bahagi ng refspec.</p>
 </div>
 <div class="paragraph">
 <p>Maaari mo ring tukuyin ang maramihang mga refspec sa iyong configuration file para sa pagkuha.
