--- a/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Refspec.html
+++ b/external/book/content/book/tr/v2/Dahili-Git-Ögeleri-Refspec.html
@@ -90,7 +90,7 @@ From git@github.com:schacon/simplegit
 </div>
 <div class="paragraph">
 <p>Burada bir hızlı ileri-sarma referansı olarak listelenmediği için <code>master</code> dalının çekilmesi reddedildi.
-Bunu, refspec’in önüne <code>+</code> belirterek geçersiz kılabilirsiniz.</p>
+Bunu, refspec’in önüne <code>{plus}</code> belirterek geçersiz kılabilirsiniz.</p>
 </div>
 <div class="paragraph">
 <p>Ayrıca, yapılandırma dosyanızda çekme için birden fazla refspec belirtebilirsiniz.
