--- a/external/book/content/book/tr/v2/GitHub-Proje-Bakımı.html
+++ b/external/book/content/book/tr/v2/GitHub-Proje-Bakımı.html
@@ -26,7 +26,7 @@ url: "/book/tr/v2/GitHub-Proje-Bakımı.html"
 <h3 id="_yeni_bir_repo_oluşturma">Yeni Bir Repo Oluşturma</h3>
 <div class="paragraph">
 <p>Projemizin kodunu paylaşmak için yeni bir repo oluşturalım.
-Bunun için, panonun sağ tarafında bulunan ``New repository`` (Yeni Repo) düğmesine veya <a href="{{< relurl "book/tr/v2/ch00/_new_repo_dropdown" >}}">``New repository`` (yeni repo) açılır-listesi.</a>'da göründüğü gibi kullanıcı adınızın yanındaki üst araç çubuğundaki <code>+</code> düğmesine tıklayarak başlayın.</p>
+Bunun için, panonun sağ tarafında bulunan ``New repository`` (Yeni Repo) düğmesine veya <a href="{{< relurl "book/tr/v2/ch00/_new_repo_dropdown" >}}">``New repository`` (yeni repo) açılır-listesi.</a>'da göründüğü gibi kullanıcı adınızın yanındaki üst araç çubuğundaki <code>{plus}</code> düğmesine tıklayarak başlayın.</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
