--- a/external/book/content/book/uk/v2/GitHub-Супроводжування-проекту.html
+++ b/external/book/content/book/uk/v2/GitHub-Супроводжування-проекту.html
@@ -26,7 +26,7 @@ url: "/book/uk/v2/GitHub-Супроводжування-проекту.html"
 <h3 id="_створення_нового_сховища">Створення нового сховища</h3>
 <div class="paragraph">
 <p>Створимо нове сховище, до якого ми додамо код нашого проекту.
-Спочатку натиснемо кнопку “New repository” (нове сховище) праворуч панелі керування, чи за допомогою кнопки <code>+</code> у верхній панелі інструментів біля вашого імені користувача, як можна побачити в <a href="{{< relurl "book/uk/v2/ch00/_new_repo_dropdown" >}}">“New repository” (нове сховище) у випадному списку.</a>.</p>
+Спочатку натиснемо кнопку “New repository” (нове сховище) праворуч панелі керування, чи за допомогою кнопки <code>{plus}</code> у верхній панелі інструментів біля вашого імені користувача, як можна побачити в <a href="{{< relurl "book/uk/v2/ch00/_new_repo_dropdown" >}}">“New repository” (нове сховище) у випадному списку.</a>.</p>
 </div>
 <div class="imageblock">
 <div class="content">
