--- a/external/book/content/book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄.html
+++ b/external/book/content/book/zh-tw/v2/Git-基礎-檢視提交的歷史記錄.html
@@ -115,7 +115,7 @@ index a0a60ae..47c6340 100644
 </div>
 </div>
 <div class="paragraph">
-<p>這個選項除了顯示相同的資訊以外，還會在每筆提交資訊後面附加每個修改檔案的差異內容（譯註：使用 <code>-</code> <code>+</code> 來表示差異，<code>-</code> 是刪除行，<code>+</code> 是新增行；未修改的上下文資訊預設是三行，用來定位有修改的地方）；
+<p>這個選項除了顯示相同的資訊以外，還會在每筆提交資訊後面附加每個修改檔案的差異內容（譯註：使用 <code>-</code> <code>{plus}</code> 來表示差異，<code>-</code> 是刪除行，<code>{plus}</code> 是新增行；未修改的上下文資訊預設是三行，用來定位有修改的地方）；
 對於「程式碼審核」或「快速瀏覽」協同工作者所新增的一系列提交內容，這是非常有幫助的。
 你也可以使用 <code>git log</code> 提供的一系列「摘要」選項；
 例如：若想檢視每筆提交簡略的統計資訊，你可以使用 <code>--stat</code> 選項：</p>
