--- a/external/book/content/book/zh-tw/v2/GitHub-維護專案.html
+++ b/external/book/content/book/zh-tw/v2/GitHub-維護專案.html
@@ -26,7 +26,7 @@ url: "/book/zh-tw/v2/GitHub-維護專案.html"
 <h3 id="_建立一個新倉儲">建立一個新倉儲</h3>
 <div class="paragraph">
 <p>來建立一個拿來分享我們的原始碼的倉儲吧。
-首先點擊主控面板右邊的「New Repository」；或是點擊頂端工具列裡面使用者名稱旁邊的 <code>+</code> 按鈕，如 <a href="{{< relurl "book/zh-tw/v2/ch00/r_new_repo_dropdown" >}}">「New repository」下拉式選單.</a> 所示。</p>
+首先點擊主控面板右邊的「New Repository」；或是點擊頂端工具列裡面使用者名稱旁邊的 <code>{plus}</code> 按鈕，如 <a href="{{< relurl "book/zh-tw/v2/ch00/r_new_repo_dropdown" >}}">「New repository」下拉式選單.</a> 所示。</p>
 </div>
 <div class="imageblock">
 <div class="content">
