--- a/external/book/content/book/zh/v2/Git-内部原理-引用规范.html
+++ b/external/book/content/book/zh/v2/Git-内部原理-引用规范.html
@@ -40,10 +40,10 @@ url: "/book/zh/v2/Git-内部原理-引用规范.html"
 </div>
 </div>
 <div class="paragraph">
-<p>引用规范的格式由一个可选的 <code>` 号和紧随其后的 `&lt;src&gt;:&lt;dst&gt;` 组成，
-其中 `&lt;src&gt;` 是一个模式（pattern），代表远程版本库中的引用；
-`&lt;dst&gt;` 是本地跟踪的远程引用的位置。
-`</code> 号告诉 Git 即使在不能快进的情况下也要（强制）更新引用。</p>
+<p>引用规范的格式由一个可选的 <code>+</code> 号和紧随其后的 <code>&lt;src&gt;:&lt;dst&gt;</code> 组成，
+其中 <code>&lt;src&gt;</code> 是一个模式（pattern），代表远程版本库中的引用；
+<code>&lt;dst&gt;</code> 是本地跟踪的远程引用的位置。
+<code>+</code> 号告诉 Git 即使在不能快进的情况下也要（强制）更新引用。</p>
 </div>
 <div class="paragraph">
 <p>默认情况下，引用规范由 <code>git remote add origin</code> 命令自动生成，
