download/guis: add a graceful redirect
We just fixed incorrect Javascript code that would replace the URL in
the browser window by an incorrect URL when filtering the GUIs by
operating system.

With this here commit, we retroactively handle those incorrect URLs by
redirecting to the correct URLs instead of 404ing.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/content/downloads/guis/_index.html
+++ b/content/downloads/guis/_index.html
@@ -5,6 +5,8 @@ title: "Git - GUI Clients"
 url: /downloads/guis.html
 aliases:
 - /downloads/guis/index.html
+- /download/guis/index.html
+- /download/guis.html
 ---
 
 <div id="main">
